--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aiofiles==0.8.0
+aiosqlite==0.17.0
 anyio==3.5.0
 asgiref==3.5.0
 click==8.0.4
+databases==0.5.5
 dnspython==2.2.1
 email-validator==1.1.3
 fastapi==0.75.0
@@ -16,6 +18,7 @@ python-multipart==0.0.5
 PyYAML==6.0
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.32
 starlette==0.17.1
 tomli==2.0.1
 typing_extensions==4.1.1
